@@ -4,5 +4,8 @@ sendPerCycle = 50
   # cat=basic; type=string; label=Language of the cron task : Language used to localize progress messages sent by the dmailer cron task.
 cron_language = en
 
+  # cat=basic/enable; type=boolean; label=Enable sendmail defer mode : Use sendmail defer mode when running dmailer cron task.
+useDeferMode = 0
+
   # cat=basic; type=string; label= Additional DB fields of the recipient : Additional fields that may be substituted in the direct mail messages.
 addRecipFields =
